[dependencies]
websocket = "0.26.4"
tokio = { version = "1.17.0", features = ["full"] }
snafu = { version = "0.7.0"}
serde = { version ="1.0.80", features = ["derive"] }
serde_json = "1.0.13"
slog = "2.2.1"
slog-stdlog = "3.0.2"

[lib]
name = "phxchannel"

[package]
name = "phx-channel"
version = "0.1.0"
edition = "2018"
authors = ["lamhai1401 <lamthanhhai141@gmail.com>"]
# default-run = "phxchannel"
readme = "README.md"
homepage = "github.com/lamhai1401/phx-channel"
repository = "github.com/lamhai1401/phx-channel"
